--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
+        <provider
+            android:name=".Database.MoviesProvider"
+            android:authorities="com.itarusoft.movies"
+            android:exported="false" />
     </application>
 
 </manifest>
